# crab_rocket

./: .dockerignore  .env  .gitignore  .rustfmt.toml  20240406users_posts_follows.sql  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENCE  README.md  Rocket.toml  TODO.md  api-blueprint.md  apidemo.md  database.md  diesel.toml  docker-compose.yml  init.sh  rsp_code.md  toast.yml  todo.md
crab_rocket_post/: Cargo.toml
crab_rocket_post/src/: lib.rs
crab_rocket_post/src/mappers/: post_mapper.rs
crab_rocket_post/src/models/: post.rs
crab_rocket_post/src/routes/: post_param.rs
crab_rocket_post/src/services/: post_service.rs
crab_rocket_post/src/services/impl/: post_impl.rs
crab_rocket_task/: Cargo.toml
crab_rocket_task/src/controllers/: task_controller.rs
crab_rocket_task/src/mappers/: task_mapper.rs
crab_rocket_task/src/models/: task.rs
crab_rocket_task/src/services/impl/: task_impl.rs
modules/auth/: Cargo.toml
modules/auth/login/: Cargo.toml
modules/auth/login/src/: lib.rs
modules/auth/login/src/models/: log_error.rs  login.rs  logout.rs
modules/auth/session/: Cargo.toml
modules/auth/session/src/: lib.rs
modules/auth/session/src/models/: session.rs
modules/auth/src/: lib.rs  main.rs
modules/auth/src/mappers/: login_auth_mapper.rs  mod.rs
modules/auth/src/models/: log_trait.rs  login.rs  logout.rs  mod.rs  session.rs
modules/auth/src/routes/: auth_routes.rs
modules/cb_category/: Cargo.toml
modules/cb_category/src/: lib.rs
modules/cb_category/src/mappers/: category_mapper.rs
modules/cb_category/src/models/: category.rs
modules/cb_category/src/services/: category_service.rs
modules/cb_file/: Cargo.toml
modules/cb_file/src/: lib.rs
modules/cb_file/src/controllers/: file_controller.rs
modules/cb_file/src/mappers/: file_mapper.rs
modules/cb_file/src/models/: file.rs  file_response.rs
modules/cb_file/src/routes/: form_file_route.rs
modules/cb_file/src/services/: file_service.rs
modules/entities/: Cargo.toml
modules/entities/cb_category/: Cargo.toml
modules/entities/cb_category/src/controllers/: category_controller.rs
modules/entities/cb_category/src/mappers/: category_mapper.rs
modules/entities/cb_category/src/models/: category.rs  category_filter.rs
modules/entities/cb_category/src/routes/: category_route.rs
modules/entities/cb_category/src/services/: category_service.rs
modules/entities/cb_customer/: Cargo.toml
modules/entities/cb_customer/src/: lib.rs
modules/entities/cb_customer/src/controllers/: customer_controller.rs
modules/entities/cb_customer/src/mappers/: customer_mapper.rs
modules/entities/cb_customer/src/models/: customer.rs
modules/entities/cb_customer/src/routes/: customer_route.rs
modules/entities/cb_customer/src/services/: customer_service.rs
modules/entities/cb_employee/: Cargo.toml
modules/entities/cb_employee/src/: main.rs
modules/entities/cb_employee/src/controllers/: employee_controller.rs
modules/entities/cb_employee/src/mappers/: employee_mapper.rs
modules/entities/cb_employee/src/models/: employee.rs  employee_filter.rs
modules/entities/cb_employee/src/routes/: employee_route.rs
modules/entities/cb_employee/src/services/: employee_service.rs
modules/entities/cb_file/: Cargo.toml
modules/entities/cb_file/src/: lib.rs
modules/entities/cb_file/src/controllers/: file_controller.rs
modules/entities/cb_file/src/mappers/: file_mapper.rs
modules/entities/cb_file/src/models/: file.rs  file_filter.rs  file_response.rs  upload.rs
modules/entities/cb_file/src/routes/: bin_file_route.rs  form_file_route.rs
modules/entities/cb_file/src/services/: file_service.rs  file_service_trait.rs
modules/entities/cb_follow/: Cargo.toml
modules/entities/cb_follow/src/: lib.rs  main.rs
modules/entities/cb_follow/src/controllers/: follow_controller.rs  follow_controller_trait.rs
modules/entities/cb_follow/src/mappers/: follow_mapper.rs  follow_mapper_trait.rs
modules/entities/cb_follow/src/models/: follow.rs  follow_filter.rs
modules/entities/cb_follow/src/routes/: follow_route.rs
modules/entities/cb_follow/src/services/: follow_service.rs  follow_service_trait.rs
modules/entities/cb_info/: Cargo.toml
modules/entities/cb_info/src/controllers/: info_controller.rs
modules/entities/cb_info/src/mappers/: info_mapper.rs
modules/entities/cb_info/src/routes/: info_route.rs
modules/entities/cb_info/src/services/: info_service.rs
modules/entities/cb_permission/: Cargo.toml
modules/entities/cb_permission/src/controllers/: permission_controller.rs
modules/entities/cb_permission/src/mappers/: permission_mapper.rs
modules/entities/cb_permission/src/models/: permission.rs  permission_filter.rs
modules/entities/cb_permission/src/routes/: permission_route.rs
modules/entities/cb_permission/src/services/: permission_service.rs
modules/entities/cb_post/: Cargo.toml
modules/entities/cb_post/src/: lib.rs  main.rs
modules/entities/cb_post/src/controllers/: post_controller.rs
modules/entities/cb_post/src/mappers/: post_mapper.rs
modules/entities/cb_post/src/models/: post.rs
modules/entities/cb_post/src/routes/: post_route.rs
modules/entities/cb_post/src/services/: post_service.rs
modules/entities/cb_product/: Cargo.toml
modules/entities/cb_product/src/controllers/: product_controller.rs
modules/entities/cb_product/src/mappers/: product_mapper.rs
modules/entities/cb_product/src/models/: product.rs
modules/entities/cb_product/src/routes/: product_route.rs
modules/entities/cb_product/src/services/: product_service.rs
modules/entities/cb_role/: Cargo.toml
modules/entities/cb_role/src/: main.rs
modules/entities/cb_role/src/controllers/: role_controller.rs
modules/entities/cb_supplier/: Cargo.toml
modules/entities/cb_task/: Cargo.toml
modules/entities/cb_task/src/: lib.rs  main.rs
modules/entities/cb_user/: Cargo.toml
modules/entities/cb_user/src/: main.rs
modules/entities/src/: lib.rs
modules/schemas/cb_schema/: .env  Cargo.toml  README.md
modules/schemas/cb_schema/src/: lib.rs  schema.rs  update_reload.rs
(+682 files in other folders)
