[package]
name = "crab_rocket"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["modules/*"]

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
rocket_cors = "0.6.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
# Need to enable `chrono` feature to handle DateTime.
# https://docs.diesel.rs/master/diesel/sql_types/struct.Datetime.html
dotenvy = "0.15"
serde_json = "1.0.117"
colored = "2.1.0"
utoipa = { version = "4", features = ["rocket_extras"] }
entities = { path = "./modules/entities" }
services = { path = "./modules/services" }
schemas = { path = "./modules/schemas" }
auth = { path = "./modules/auth" }
login = { path = "./modules/auth/login" }
crab_rocket_utils = { path = "./modules/utils/cb_utils" }
crab_rocket_schema = { path = "./modules/schemas/cb_schema" }
# diesel_cli = "2.2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
