[package]
name = "crab_rocket_task"
version = "0.1.0"
edition = "2021"

[dependencies]
crab_rocket_utils = { path = "../crab_rocket_utils" }
crab_rocket_schema = { path = "../crab_rocket_schema" }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
utoipa = { version = "4", features = ["rocket_extras"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
serde_json = "1.0.117"
