[package]
name = "crab_rocket_category"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
utoipa = { version = "4", features = ["rocket_extras"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
serde_json = "1.0.117"
dotenvy = "0.15"
rocket_cors = "0.6.0"
crab_rocket_utils = { path = "../cb_utils" }
crab_rocket_schema = { path = "../cb_schema" }
obj_traits = { path = "../obj_traits" }
