[package]
name = "crab_rocket_file"
version = "0.1.0"
edition = "2021"
description = "File package for the crab rocket project"
license = "MIT OR Apache-2.0"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
utoipa = { version = "4", features = ["rocket_extras"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
rand = "0.8.5"
serde_json = "1.0.117"
uuid = { version = "1.0", features = ["serde", "v4"] }
crab_rocket_schema = { path = "../cb_schema" }
crab_rocket_utils = { path = "../cb_utils" }
