[package]
name = "login"
version = "0.1.0"
edition = "2021"

[dependencies]
crab_rocket_user = { path = "../../entities/cb_user" }
crab_rocket_schema = { path = "../../schemas/cb_schema" }
crab_rocket_utils = { path = "../../utils/cb_utils" }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.117"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
session = { path = "../session" }
