[package]
name = "crab_rocket_task"
version = "0.1.0"
edition = "2021"
description = "Task package for the crab rocket project"
license = "MIT OR Apache-2.0"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
utoipa = { version = "4", features = ["rocket_extras"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.9.0"
serde_json = "1.0.117"
dotenvy = "0.15"
rocket_cors = "0.6.0"
crab_rocket_utils = { path = "../../utils/cb_utils" }
crab_rocket_schema = { path = "../../schemas/cb_schema" }
obj_traits = { path = "../../utils/obj_traits" }
auth = { path = "../../auth" }
