[package]
name = "crab_rocket_schema"
version = "0.1.0"
edition = "2021"
description = "Schema definitions for the crab rocket project"
license = "MIT OR Apache-2.0"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
chrono = { version = "0.4.38" }
dotenv = { version = "0.15.0" }
colored = { version = "2.1.0" }
r2d2 = "0.8.10"
